# django-scheduling

./: .env  README.md  compose.yaml  dockerfile  entrypoint.sh  main.py  pyproject.toml  template.env
agenda/: __init__.py  celery.py  settings.py  urls.py
api/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_task_delete_post.py  0002_tasktag_task_tags.py  0003_task_unique_task.py  0004_remove_task_id_task_task_id.py
api/models/: __init__.py  tag_model.py  task_model.py  task_tag_model.py
api/services/: register_service.py  schedule_service.py  task_service.py
api/utils/: constants.py  types.py
api/views/: __init__.py  register_view.py  schedule_view.py  task_view.py
